# genai_templates

bot_templ/: pyproject.toml
bot_templ/bot_templ/: app.py
function calling bot_templ/: pyproject.toml
function calling bot_templ/bot_templ/: app.py
