[tool.poetry]
name = "bot-templ"
version = "0.1.0"
description = ""
authors = ["Muhammad Zain Attiq <zainatteeq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
streamlit-chat = "^0.1.1"
python-dotenv = "^1.0.1"
langchain = "^0.2.3"
openai = "^1.33.0"
ipython = "^8.25.0"
langchain-community = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
